--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 		<input type="search" name="sweetsearch"><br>
 		<button type="button">Search!</button>
 	</div>
+	<div class="comment"><em>The best search engine you'll ever use!</em>
+	</div>
+
 </body>
 </html>
